Text wrap fixes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,7 +15,7 @@
 	:root {
 		--text: #f8f8f2;
 		--link: #8be9fd;
-		--link_visited: ##8be9fd;
+		--link_visited: #8be9fd;
 		--accent1: #f8f8f2;
 		--accent2: #f8f8f2;
 		--background: #282a36;
@@ -96,6 +96,7 @@ a.post-date:hover {
 
 .e-content {
 	margin-bottom: 2em;
+	overflow-wrap: anywhere;
 }
 
 .e-content p:first-of-type,
@@ -118,6 +119,7 @@ ul.reply-buttons li {
 	display: inline;
 	margin-right: 0.2em;
 	line-height: 2em;
+	white-space: nowrap;
 }
 
 nav a,
